[tool.poetry]
name = "sefer-bishul"
version = "0.1.0"
description = ""
authors = ["Tamir Bahar"]
license = "MIT"
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-book = "sefer_bishul.ng:main"


[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
jinja2 = "^3.1.2"
attrs = "^23.1.0"
markdown-it-py = "^3.0.0"
pillow = "^10.2.0"
nox = "^2023.4.22"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^24.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
# Configure isort to work without access to site-packages
known_first_party = ["sefer_bishul", "tests"]

# Settings for Black compatibility
profile = "black"
line_length = 88


[tool.mypy]
check_untyped_defs = true
python_version = "3.11"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "-ra -q --cov --cov-report=xml --cov-report=term-missing"
testpaths = [
    "tests",
]


[tool.ruff]
# Avoid automatic removal of unused variables
unfixable = ['F841'] # unused-variable


[tool.coverage]
report.skip_covered = true

[tool.scriv]
format = "md"