[project]
name = "sefer-bishul"
version = "0.1.0"
description = ""
authors = [{ name = "Tamir Bahar" }]
requires-python = ">=3.13, <3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.2",
    "attrs>=23.1.0",
    "markdown-it-py>=3.0.0",
    "pillow>=10.2.0",
    "nox>=2023.4.22",
    "types-pillow>=10.2.0.20240206",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
build-book = "sefer_bishul.ng:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.1",
]

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
xfail_strict = true
addopts = "-ra -q --cov --cov-report=xml --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff.lint]
# Avoid automatic removal of unused variables
unfixable = ['F841'] # unused-variable

[tool.coverage]
report.skip_covered = true

[tool.scriv]
format = "md"
